k8s/observability/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: masterino-observability
  labels:
    app.kubernetes.io/part-of: masterino-observability
